syntax = "proto3";

option java_package = "com.example.more";
option java_outer_classname = "MoreSample";
option java_multiple_files = true;

message MoreSampleMsg {
  string bar = 1;
}

message MoreSampleFoo {
  string stuff = 1;
}
